--- a/scripts/style.css
+++ b/scripts/style.css
@@ -132,6 +132,8 @@ font {
 	padding: 10px;
 	margin: 5px;
   	border-radius: 10px;
+	background-color: black;
+	color: white;
 	border: 2px solid blue;
 	text-shadow: 0 0 5px blue, 0 0 5px red, 0 5px 0 yellow;
 	
