--- a/scripts/style.css
+++ b/scripts/style.css
@@ -140,6 +140,7 @@ font {
 
 	
 }
+/*AQUI*/
 #telaFinal {
     position: fixed;
     top: 50%;
@@ -151,3 +152,4 @@ font {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+/*AQUI*/
